--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -75,7 +75,8 @@ library
                        http-client-tls,
                        microlens,
                        microlens-th,
-                       http-types
+                       http-types,
+                       deepseq
 
   default-language:    Haskell2010
   hs-source-dirs:      src
