--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -34,7 +34,7 @@ extra-source-files:
 
 cabal-version:       >=1.10
 
-homepage:            https://github.com/tebello-thejane/bitx-haskell
+homepage:            https://github.com/tebello-thejane/bitx.hs
 
 tested-with:         GHC >=7.8.1 && <=8.0.1
 
