--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ matrix:
       addons: {apt: {packages: [cabal-install-1.22,ghc-7.10.3],sources: [hvr-ghc]}}
     - env: CABALVER=1.24 GHCVER=8.0.1
       addons: {apt: {packages: [cabal-install-1.24,ghc-8.0.1],sources: [hvr-ghc]}}
+    - env: CABALVER=1.24 GHCVER=8.2.1
+      addons: {apt: {packages: [cabal-install-1.24,ghc-8.2.1],sources: [hvr-ghc]}}
     - env: CABALVER=head GHCVER=head
       addons: {apt: {packages: [cabal-install-head,ghc-head],  sources: [hvr-ghc]}}
     - env: STACK=STACK ARGS=""
@@ -27,6 +29,12 @@ matrix:
     - env: STACK=STACK ARGS="--resolver lts-4"
       addons: {apt: {packages: [libgmp-dev]}}
     - env: STACK=STACK ARGS="--resolver lts-5"
+      addons: {apt: {packages: [libgmp-dev]}}
+    - env: STACK=STACK ARGS="--resolver lts-6"
+      addons: {apt: {packages: [libgmp-dev]}}
+    - env: STACK=STACK ARGS="--resolver lts-7"
+      addons: {apt: {packages: [libgmp-dev]}}
+    - env: STACK=STACK ARGS="--resolver lts-8"
       addons: {apt: {packages: [libgmp-dev]}}
     - env: STACK=STACK ARGS="--resolver lts"
       addons: {apt: {packages: [libgmp-dev]}}
