--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -37,7 +37,7 @@ cabal-version:       >=1.10
 
 homepage:            https://github.com/tebello-thejane/bitx.hs
 
-tested-with:         GHC >=7.8.1 && <=8.2.1
+tested-with:         GHC >=7.8.1 && <=8.2.2
 
 --------------------------------------------------------------------------------
 
@@ -53,7 +53,7 @@ library
     Network.Bitcoin.BitX.Private.Fees
     Network.Bitcoin.BitX.Response
 
-  ghc-options: -Wall
+  ghc-options: -Wall -Wcompat
   if impl(ghc >= 6.8)
     ghc-options: -fwarn-tabs
 
