-Wcompat does not exist before GHC 7.10, and provides little benefit here.

--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -53,7 +53,7 @@ library
     Network.Bitcoin.BitX.Private.Fees
     Network.Bitcoin.BitX.Response
 
-  ghc-options: -Wall -Wcompat
+  ghc-options: -Wall
   if impl(ghc >= 6.8)
     ghc-options: -fwarn-tabs
 
