--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -35,6 +35,6 @@ jobs:
         cabal update
         cabal build --only-dependencies --enable-tests --enable-benchmarks
     - name: Build
-      run: cabal build --enable-tests --enable-benchmarks all
+      run: cabal build --enable-tests --enable-benchmarks --write-ghc-environment-files=ghc8.4.4+ all
     - name: Run tests
       run: cabal test all
